--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,10 @@
 
     <p class="animated fadeIn text-muted">MDB Team</p>
   </div>
+
+  <div>
+    <routeroutlet></routeroutlet>
+  </div>
 </div>
 <!-- /Start your project here-->
     
